--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>8.8</version>
+        </dependency>
     </dependencies>
 </project>
